--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require": {
         "php": "^8.0",
+        "cycle/orm": "^1.5",
         "httpsoft/http-message": "^1.0.5",
         "psr/container": "^1.0",
         "psr/http-message": "^1.0",
@@ -25,6 +26,7 @@
         "symfony/console": "^5.3",
         "yiisoft/aliases": "^2.0",
         "yiisoft/assets": "^1.0",
+        "yiisoft/auth": "^3.0",
         "yiisoft/cache": "^1.0",
         "yiisoft/cache-file": "^1.0",
         "yiisoft/config": "1.0.x-dev",
@@ -34,6 +36,7 @@
         "yiisoft/error-handler": "^1.0",
         "yiisoft/factory": "3.0.x-dev",
         "yiisoft/files": "^1.0",
+        "yiisoft/form": "1.0.x-dev",
         "yiisoft/html": "^1.2",
         "yiisoft/http": "^1.1",
         "yiisoft/i18n": "^1.0.0",
@@ -41,6 +44,7 @@
         "yiisoft/log-target-file": "^1.0",
         "yiisoft/router": "@dev",
         "yiisoft/router-fastroute": "@dev",
+        "yiisoft/user": "3.0.x-dev",
         "yiisoft/view": "^1.0",
         "yiisoft/yii-bulma": "@dev",
         "yiisoft/yii-console": "3.0.x-dev",
