--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
         "symfony/console": "^5.3",
+        "yiisoft/access": "^1.0",
         "yiisoft/aliases": "^2.0",
         "yiisoft/assets": "^1.0",
         "yiisoft/auth": "^3.0",
