collegamento con db effettuato e schermata index semplice creata

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
         "psr/container": "^1.0",
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
+        "spiral/database": "^2.8",
+        "spiral/prototype": "^2.8",
         "symfony/console": "^5.3",
         "yiisoft/access": "^1.0",
         "yiisoft/aliases": "^2.0",
@@ -49,6 +51,7 @@
         "yiisoft/view": "^1.0",
         "yiisoft/yii-bulma": "@dev",
         "yiisoft/yii-console": "3.0.x-dev",
+        "yiisoft/yii-cycle": "3.0.x-dev",
         "yiisoft/yii-debug": "^3.0@dev",
         "yiisoft/yii-event": "^1.0",
         "yiisoft/yii-view": "^1.0",
