--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "yiisoft/yii-bulma": "@dev",
         "yiisoft/yii-console": "3.0.x-dev",
         "yiisoft/yii-cycle": "3.0.x-dev",
+        "yiisoft/yii-dataview": "3.0.x-dev",
         "yiisoft/yii-debug": "^3.0@dev",
         "yiisoft/yii-event": "^1.0",
         "yiisoft/yii-view": "^1.0",
