--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 		"cycle/annotated": "^2.3",
 		"cycle/orm": "^1.5",
 		"httpsoft/http-message": "^1.0.5",
+		"middlewares/http-authentication": "^2.1",
 		"psr/container": "^1.0",
 		"psr/http-message": "^1.0",
 		"psr/http-server-handler": "^1.0",
@@ -46,6 +47,7 @@
 		"yiisoft/log-target-file": "^1.0",
 		"yiisoft/router": "@dev",
 		"yiisoft/router-fastroute": "@dev",
+		"yiisoft/session": "^1.0",
 		"yiisoft/user": "3.0.x-dev",
 		"yiisoft/view": "^1.0",
 		"yiisoft/yii-bulma": "@dev",
